force-app/main/default/objects/Travel_Eligibility__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Band</valueSetName>
    </valueSet>
</CustomField>