force-app/main/default/objects/Travel_Eligibility__c/fields/Conveyance_Allowance_per_KM_Own_Car__c.field-meta.xml
<CustomField>
    <fullName>Conveyance_Allowance_per_KM_Own_Car__c</fullName>
    <label>Conveyance Allowance (per KM): Own Car</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>