force-app/main/default/objects/Travel_Eligibility__c/fields/Daily_KM_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_KM_Limit__c</fullName>
    <label>Daily KM Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>