force-app/main/default/objects/Travel_Eligibility__c/fields/Daily_KM_Limit_for_DIC__c.field-meta.xml
<CustomField>
    <fullName>Daily_KM_Limit_for_DIC__c</fullName>
    <inlineHelpText>Daily KM Limit for District-In-Charge</inlineHelpText>
    <label>Daily KM Limit for DIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>