force-app/main/default/objects/Travel_Eligibility__c/fields/Dearness_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Dearness_Allowance__c</fullName>
    <inlineHelpText>Upcountry Travel Dearness Allowance if the Travel is Self-Managed</inlineHelpText>
    <label>DA Upcountry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>