force-app/main/default/objects/Travel_Eligibility__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Van Sale Representative</fullName>
            </value>
            <value>
                <fullName>Delivery Boy</fullName>
            </value>
            <value>
                <fullName>Merchandiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>