force-app/main/default/objects/Travel_Eligibility__c/fields/Eligibility_For__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_For__c</fullName>
    <label>Eligibility For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Band</fullName>
                <default>true</default>
                <label>Band</label>
            </value>
            <value>
                <fullName>Designation</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
                <isActive>false</isActive>
                <label>Profile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>