force-app/main/default/objects/Travel_Eligibility__c/fields/Expense_Type_UC__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type_UC__c</fullName>
    <label>Expense Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expense_Type2</valueSetName>
    </valueSet>
</CustomField>