force-app/main/default/objects/Travel_Eligibility__c/fields/Local_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Local_Conveyance__c</fullName>
    <label>Local Conveyance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>