force-app/main/default/objects/Travel_Eligibility__c/fields/Lodging_Expense_per_Day_Metro__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Expense_per_Day_Metro__c</fullName>
    <inlineHelpText>Upcountry Travel Lodging Expenses per Day Limit for Metro Cities</inlineHelpText>
    <label>Lodging Expense (per Day): Metro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>