force-app/main/default/objects/Travel_Eligibility__c/fields/Mandatory_Remarks_File_Types__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Remarks_File_Types__c</fullName>
    <label>Mandatory Remarks Expense Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expense_Type2</valueSetName>
    </valueSet>
</CustomField>