force-app/main/default/objects/Travel_Eligibility__c/fields/Mobile_Expense__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Expense__c</fullName>
    <label>Mobile Expense Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>