force-app/main/default/objects/Travel_Eligibility__c/fields/Travel_Mode_HQ__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode_HQ__c</fullName>
    <label>Travel Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>